# migrant

./: .gitignore  .travis.yml  CHANELOG.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  Migrant.toml  README.md  test_all.sh
.github/workflows/: ci.yml  pages.yml  release.yml
ci/: before_deploy.sh  install.sh  script.sh
db/: migrant.db
docker/: Dockerfile
docs/: book.toml
docs/assets/: custom.css  custom.js
docs/landing/: app.js  index.html  styles.css
docs/src/: SUMMARY.md  backends.md  cli.md  concurrency.md  configuration.md  install.md  introduction.md  library.md  migration-types.md  migrations.md  quickstart.md  transactions.md  troubleshooting.md
examples/: embed.rs
migrant_lib/: .gitignore  .travis.yml  CHANELOG.md  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Migrant.toml  README.md  commands.txt  readme.sh  test.sh
migrant_lib/ci/: before_deploy.ps1  before_deploy.sh  install.sh  script.sh
migrant_lib/examples/: embed.rs  embedded_cli_compatible.rs  embedded_programmable.rs  in_memory_sqlite.rs  migrant_cli_compatible.rs  migratable.rs  programmable.rs  settings_file_programmable.rs
migrant_lib/migrations/initial/: down.sql  up.sql
migrant_lib/migrations/second/: down.sql  up.sql
migrant_lib/src/: config.rs  connection.rs  errors.rs  lib.rs  macros.rs  migratable.rs  migration.rs  migrator.rs  ops.rs  tags.rs  types.rs  util.rs
migrant_lib/src/config/: builders.rs  init.rs  mod.rs  settings.rs
migrant_lib/src/drivers/: mod.rs  mysql.rs  pg.rs  sqlite.rs
migrant_lib/tests/: reload_memory.rs  server_dbs.rs  sqlite.rs
migrations/20170812145327_initial/: down.sql  up.sql
migrations/20171126194042_second/: down.sql  up.sql
spec/: README.md  advisory-locking.md  bash-completions.md  cli-migration-management.md  cli-project-setup.md  config-file-and-env-resolution.md  database-backends.md  database-shell.md  distribution.md  error-handling-api.md  in-memory-sqlite.md  library-config-api.md  migration-tui.md  migration-types.md  migrator-api.md  self-update.md  settings-builders.md  transactional-migrations.md
src/: cli.rs  errors.rs  lib.rs  main.rs  status.rs  tui.rs
tests/: bash_completions.rs  migrant.rs
