[package]
name = "migrant"
version = "0.13.0"
authors = ["James Kominick <james@kominick.com>"]
description = "CLI Database migration management for postgres, sqlite, mysql"
repository = "https://github.com/jaemk/migrant"
readme = "README.md"
keywords = ["database", "migration", "postgres", "sqlite", "mysql"]
categories = ["command-line-utilities", "database", "development-tools"]
license = "MIT"
exclude = [
    "/ci/*",
    "/migrations/*",
    "/db/*",
    "Migrant.toml",
    ".travis.yml",
]

[dependencies]
clap = "2"
error-chain = "0.12"
migrant_lib = { version = "0.26" }
self_update = { version = "0.5", optional = true }
rusqlite = { version = "0.19", optional = true, features = ["bundled"] }
dotenv = "0.14"

[dev-dependencies]
assert_cli = "0.6"

[features]
default = []
sqlite = ["migrant_lib/d-sqlite", "rusqlite"]
postgres = ["migrant_lib/d-postgres"]
mysql = ["migrant_lib/d-mysql"]
update = ["self_update"]
integration_tests = []

