[package]
name = "migrant"
version = "1.0.0-rc.2"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI Database migration management for postgres, sqlite, mysql"
repository = "https://github.com/jaemk/migrant"
readme = "README.md"
keywords = ["database", "migration", "postgres", "sqlite", "mysql"]
categories = ["command-line-utilities", "database", "development-tools"]
exclude = [
    "/migrations/*",
    "/db/*",
    "Migrant.toml",
]

[workspace]
members = ["migrant_lib"]

[workspace.package]
edition = "2021"
rust-version = "1.88"
authors = ["James Kominick <james@kominick.com>"]
license = "MIT"

[workspace.dependencies]
migrant_lib = { path = "migrant_lib", version = "1.0.0-rc.2" }

# shared between the cli and the library
rusqlite = "0.40"

# cli-only
clap = "4"
clap_complete = "4"
crossterm = "0.29"
dotenvy = "0.15"
ratatui = "0.30"
self_update = "0.44"
assert_cmd = "2"
predicates = "3"

# library-only
chrono = "0.4"
log = "0.4"
mysql = "28"
native-tls = "0.2"
percent-encoding = "2"
postgres = "0.19"
postgres-native-tls = "0.5"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
thiserror = "2"
toml = "0.9"
url = "2"
walkdir = "2"

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
crossterm = { workspace = true }
dotenvy = { workspace = true }
migrant_lib = { workspace = true }
ratatui = { workspace = true }
rusqlite = { workspace = true, optional = true, features = ["bundled"] }
self_update = { workspace = true, optional = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
sqlite = ["migrant_lib/sqlite", "dep:rusqlite"]
postgres = ["migrant_lib/postgres"]
mysql = ["migrant_lib/mysql"]
update = ["dep:self_update"]
vendored-openssl = ["migrant_lib/vendored-openssl"]
integration_tests = []
