[package]
edition = "2018"
name = "migrant_lib"
version = "0.34.0"
authors = ["James Kominick <james@kominick.com>"]
description = "Database migration and configuration library for postgres, sqlite, mysql"
repository = "https://github.com/jaemk/migrant_lib"
keywords = ["database", "migration", "postgres", "sqlite", "mysql"]
categories = ["database", "development-tools"]
license = "MIT"
readme = "README.md"

exclude = [
    "/ci/*",
    "/db/*",
    "/migrations/*",
    "Migrant.toml",
    ".travis.yml",
]

[dependencies]
error-chain = { workspace = true }
chrono = { workspace = true }

lazy_static = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
percent-encoding = { workspace = true }
url = { workspace = true }
log = { workspace = true }
postgres = { workspace = true, optional = true }
native-tls = { workspace = true, optional = true }
postgres-native-tls = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
mysql = { workspace = true, optional = true }

[features]
default = []
d-sqlite = ["rusqlite"]
d-postgres = ["postgres", "postgres-native-tls", "native-tls"]
d-mysql = ["mysql"]
d-all = ["d-sqlite", "d-postgres", "d-mysql"]

