[package]
name = "migrant_lib"
version = "1.0.0-rc.2"
# explicit (not workspace-inherited) so `cargo readme` can parse the manifest
edition = "2021"
rust-version = "1.88"
authors = ["James Kominick <james@kominick.com>"]
license = "MIT"
description = "Database migration and configuration library for postgres, sqlite, mysql"
repository = "https://github.com/jaemk/migrant"
keywords = ["database", "migration", "postgres", "sqlite", "mysql"]
categories = ["database", "development-tools"]
readme = "README.md"
exclude = [
    "/db/*",
    "/migrations/*",
    "Migrant.toml",
]

[dependencies]
chrono = { workspace = true }
log = { workspace = true }
percent-encoding = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
walkdir = { workspace = true }

mysql = { workspace = true, optional = true }
native-tls = { workspace = true, optional = true }
postgres = { workspace = true, optional = true }
postgres-native-tls = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
# bundle sqlite for self-contained tests; the published library leaves
# bundling up to the consumer
rusqlite = { workspace = true, features = ["bundled"] }

[features]
default = []
sqlite = ["dep:rusqlite"]
postgres = ["dep:postgres", "dep:postgres-native-tls", "dep:native-tls"]
mysql = ["dep:mysql"]
all = ["sqlite", "postgres", "mysql"]
vendored-openssl = ["native-tls?/vendored"]

# Deprecated aliases for the pre-1.0 `d-*` feature names. Prefer the bare
# names above; these will be removed in a future release.
d-sqlite = ["sqlite"]
d-postgres = ["postgres"]
d-mysql = ["mysql"]
d-all = ["all"]

[package.metadata.docs.rs]
features = ["all"]
